// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reading Tasks Screen After close date matches snapshot 1`] = `
<C>
  <HomeworkTask
    ux={
      TaskUX {
        "_stepId": "instructions",
        "_task": Object {
          "allow_auto_graded_multiple_attempts": false,
          "closes_at": "2017-10-11T12:00:00.000Z",
          "completion_weight": 0,
          "correctness_weight": 1,
          "description": "empowering",
          "due_at": "2017-10-04T12:00:00.000Z",
          "id": 5,
          "is_deleted": false,
          "is_provisional_score": true,
          "late_work_penalty_applied": "not_accepted",
          "late_work_penalty_per_period": 1,
          "published_late_work_point_penalty": 0,
          "published_points": 7,
          "spy": Object {},
          "steps": Array [
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 22,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 22,
              "is_completed": true,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "magnetic: Fusion",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "22@1",
            },
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 23,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 23,
              "is_completed": false,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "sexy: Substructure of the Nucleus",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "23@1",
            },
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 24,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 24,
              "is_completed": true,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "value-added: Fusion",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "24@1",
            },
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 25,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 25,
              "is_completed": false,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "leading-edge: Eukaryotic Post-transcriptional Gene Regulation",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "25@1",
            },
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 26,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 26,
              "is_completed": false,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "killer: Newton's First Law of Motion: Inertia",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "26@1",
            },
          ],
          "students": Array [],
          "title": "bi-directional",
          "type": "homework",
        },
        "course": Object {
          "appearance_code": "college_physics",
          "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
          "cloned_from_id": null,
          "code": "OX-1",
          "current_role_id": 0,
          "default_due_time": "07:00",
          "default_open_time": "00:32",
          "does_cost": false,
          "ecosystem_book_uuid": "185cbf87-c72e-48f5-b51e-f14f21b5eabd",
          "ecosystem_id": 12,
          "ends_at": "2017-11-14T13:00:00.000Z",
          "homework_progress_weight": 0.1,
          "homework_score_weight": 0.4,
          "homework_weight": 0.5,
          "id": 12,
          "is_access_switchable": true,
          "is_active": true,
          "is_college": true,
          "is_concept_coach": false,
          "is_lms_enabled": false,
          "is_lms_enabling_allowed": false,
          "is_preview": false,
          "just_created": false,
          "name": "College Physics",
          "offering_id": 1,
          "periods": Array [
            Object {
              "enrollment_code": "78629",
              "enrollment_url": "http://localhost:3001/enroll/78629",
              "id": 34,
              "is_archived": false,
              "name": "1st",
              "num_enrolled_students": 66,
            },
            Object {
              "enrollment_code": "78629",
              "enrollment_url": "http://localhost:3001/enroll/78629",
              "id": 35,
              "is_archived": false,
              "name": "2nd",
              "num_enrolled_students": 33,
            },
            Object {
              "enrollment_code": "78629",
              "enrollment_url": "http://localhost:3001/enroll/78629",
              "id": 36,
              "is_archived": false,
              "name": "3rd",
              "num_enrolled_students": 17,
            },
          ],
          "reading_progress_weight": 0.2,
          "reading_score_weight": 0.2,
          "reading_weight": 0.5,
          "roles": Array [
            Object {
              "id": 65,
              "joined_at": "2017-07-21T12:00:00.000Z",
              "period_id": 0,
              "research_identifier": "",
              "type": "student",
            },
          ],
          "salesforce_book_name": "College Physics",
          "should_reuse_preview": false,
          "starts_at": "2017-07-14T12:00:00.000Z",
          "students": Array [
            Object {
              "first_name": "Okey",
              "id": 12,
              "is_active": true,
              "is_comped": false,
              "is_paid": false,
              "is_refund_allowed": false,
              "is_refund_pending": false,
              "last_name": "DuBuque",
              "name": "",
              "payment_code": undefined,
              "payment_due_at": "2017-10-17T12:00:00.000Z",
              "period_id": 0,
              "prompt_student_to_pay": false,
              "role_id": 65,
              "student_identifier": "",
              "uuid": "",
            },
          ],
          "teacher_profiles": Array [
            Object {
              "id": 1,
              "name": "Review Teacher 1",
            },
            Object {
              "id": 2,
              "name": "Review Teacher 2",
            },
          ],
          "teachers": Array [],
          "term": "spring",
          "timezone": "US/Central",
          "uses_pre_wrm_scores": false,
          "uuid": "b35df724-3e75-47e1-88bd-76790c0657fc",
          "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
          "year": 2017,
        },
        "hideTaskProgressTable": true,
        "hideToolbar": false,
        "history": Object {
          "createHref": [MockFunction],
          "listen": [MockFunction],
          "location": Object {
            "pathname": "/",
          },
          "push": [Function],
          "replace": [MockFunction],
        },
        "isLocked": false,
        "viewedInfoSteps": Array [],
        "window": [Window],
      }
    }
    windowImpl={
      FakeWindow {
        "addEventListener": [MockFunction],
        "clearInterval": [MockFunction],
        "document": Object {
          "body": <body />,
          "hidden": false,
        },
        "getSelection": [MockFunction],
        "history": Object {
          "pushState": [MockFunction],
        },
        "innerHeight": 1024,
        "innerWidth": 768,
        "localStorage": Object {
          "getItem": [MockFunction],
          "setItem": [MockFunction],
        },
        "location": Object {
          "href": "http://localhost:3001/dashboard",
          "pathname": "/",
          "reload": [MockFunction],
          "search": "",
        },
        "open": [MockFunction],
        "pageXOffset": 0,
        "pageYOffset": 0,
        "querySelector": [MockFunction],
        "removeEventListener": [MockFunction],
        "requestAnimationFrame": [MockFunction],
        "screen": Object {
          "height": 1024,
          "width": 768,
        },
        "scroll": [MockFunction],
        "setInterval": [MockFunction],
      }
    }
  />
</C>
`;

exports[`Reading Tasks Screen Before close date matches snapshot 1`] = `
<C>
  <HomeworkTask
    ux={
      TaskUX {
        "_stepId": "instructions",
        "_task": Object {
          "allow_auto_graded_multiple_attempts": false,
          "closes_at": "2017-10-21T12:00:00.000Z",
          "completion_weight": 0,
          "correctness_weight": 1,
          "description": "background",
          "due_at": "2017-10-14T12:00:00.000Z",
          "id": 2,
          "is_deleted": false,
          "is_provisional_score": true,
          "late_work_penalty_applied": "assignment",
          "late_work_penalty_per_period": 0,
          "published_late_work_point_penalty": 0,
          "published_points": 9,
          "spy": Object {},
          "steps": Array [
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 7,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 7,
              "is_completed": false,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "best-of-breed: Simple Machines",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "7@1",
            },
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 8,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 8,
              "is_completed": false,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "proactive: Breathing",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "8@1",
            },
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 9,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 9,
              "is_completed": false,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "global: Eukaryotic Post-transcriptional Gene Regulation",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "9@1",
            },
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 10,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 10,
              "is_completed": false,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "front-end: Centripetal Acceleration",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "10@1",
            },
            Object {
              "answer_id": undefined,
              "attempt_number": 0,
              "attempts_remaining": 2,
              "available_points": 1,
              "can_be_updated": true,
              "correct_answer_feedback_html": "",
              "correct_answer_id": 0,
              "dropped_method": "",
              "exercise_id": 11,
              "external_url": null,
              "feedback_html": "",
              "formats": Array [
                "multiple-choice",
                "free-response",
              ],
              "free_response": "",
              "group": "",
              "id": 11,
              "is_completed": false,
              "is_feedback_available": false,
              "labels": undefined,
              "last_completed_at": "1970-01-01T00:00:00.000Z",
              "preview": "e-business: Newton's First Law of Motion: Inertia",
              "published_comments": "",
              "published_late_work_point_penalty": null,
              "published_points": null,
              "published_points_without_lateness": null,
              "response_validation": Object {},
              "solution": Object {},
              "spy": Object {},
              "tasked_id": 0,
              "type": "exercise",
              "uid": "11@1",
            },
          ],
          "students": Array [],
          "title": "foreground",
          "type": "homework",
        },
        "course": Object {
          "appearance_code": "college_physics",
          "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
          "cloned_from_id": null,
          "code": "OX-1",
          "current_role_id": 0,
          "default_due_time": "07:00",
          "default_open_time": "00:32",
          "does_cost": false,
          "ecosystem_book_uuid": "6c322e32-9fb0-4c4d-a1d7-20c95c5c7af2",
          "ecosystem_id": 3,
          "ends_at": "2017-11-14T13:00:00.000Z",
          "homework_progress_weight": 0.1,
          "homework_score_weight": 0.4,
          "homework_weight": 0.5,
          "id": 3,
          "is_access_switchable": true,
          "is_active": true,
          "is_college": true,
          "is_concept_coach": false,
          "is_lms_enabled": false,
          "is_lms_enabling_allowed": false,
          "is_preview": false,
          "just_created": false,
          "name": "College Physics",
          "offering_id": 1,
          "periods": Array [
            Object {
              "enrollment_code": "78629",
              "enrollment_url": "http://localhost:3001/enroll/78629",
              "id": 7,
              "is_archived": false,
              "name": "1st",
              "num_enrolled_students": 47,
            },
            Object {
              "enrollment_code": "78629",
              "enrollment_url": "http://localhost:3001/enroll/78629",
              "id": 8,
              "is_archived": false,
              "name": "2nd",
              "num_enrolled_students": 49,
            },
            Object {
              "enrollment_code": "78629",
              "enrollment_url": "http://localhost:3001/enroll/78629",
              "id": 9,
              "is_archived": false,
              "name": "3rd",
              "num_enrolled_students": 37,
            },
          ],
          "reading_progress_weight": 0.2,
          "reading_score_weight": 0.2,
          "reading_weight": 0.5,
          "roles": Array [
            Object {
              "id": 28,
              "joined_at": "2017-07-21T12:00:00.000Z",
              "period_id": 0,
              "research_identifier": "",
              "type": "student",
            },
          ],
          "salesforce_book_name": "College Physics",
          "should_reuse_preview": false,
          "starts_at": "2017-07-14T12:00:00.000Z",
          "students": Array [
            Object {
              "first_name": "Edwardo",
              "id": 3,
              "is_active": true,
              "is_comped": false,
              "is_paid": false,
              "is_refund_allowed": false,
              "is_refund_pending": false,
              "last_name": "Raynor",
              "name": "",
              "payment_code": undefined,
              "payment_due_at": "2017-10-17T12:00:00.000Z",
              "period_id": 0,
              "prompt_student_to_pay": false,
              "role_id": 28,
              "student_identifier": "",
              "uuid": "",
            },
          ],
          "teacher_profiles": Array [
            Object {
              "id": 1,
              "name": "Review Teacher 1",
            },
            Object {
              "id": 2,
              "name": "Review Teacher 2",
            },
          ],
          "teachers": Array [],
          "term": "spring",
          "timezone": "US/Central",
          "uses_pre_wrm_scores": false,
          "uuid": "3d9ee211-72b6-416d-8617-37c57ecd0a87",
          "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
          "year": 2017,
        },
        "hideTaskProgressTable": true,
        "hideToolbar": false,
        "history": Object {
          "createHref": [MockFunction],
          "listen": [MockFunction],
          "location": Object {
            "pathname": "/",
          },
          "push": [Function],
          "replace": [MockFunction],
        },
        "isLocked": false,
        "viewedInfoSteps": Array [],
        "window": [Window],
      }
    }
    windowImpl={
      FakeWindow {
        "addEventListener": [MockFunction],
        "clearInterval": [MockFunction],
        "document": Object {
          "body": <body />,
          "hidden": false,
        },
        "getSelection": [MockFunction],
        "history": Object {
          "pushState": [MockFunction],
        },
        "innerHeight": 1024,
        "innerWidth": 768,
        "localStorage": Object {
          "getItem": [MockFunction],
          "setItem": [MockFunction],
        },
        "location": Object {
          "href": "http://localhost:3001/dashboard",
          "pathname": "/",
          "reload": [MockFunction],
          "search": "",
        },
        "open": [MockFunction],
        "pageXOffset": 0,
        "pageYOffset": 0,
        "querySelector": [MockFunction],
        "removeEventListener": [MockFunction],
        "requestAnimationFrame": [MockFunction],
        "screen": Object {
          "height": 1024,
          "width": 768,
        },
        "scroll": [MockFunction],
        "setInterval": [MockFunction],
      }
    }
  />
</C>
`;
